# commonUseCode

./: CMakeLists.txt  Makefile  README.md
CMakeTemplate/: CMakeLists.txt
CMakeTemplate/MultiDirectoryTemplate/: CMakeLists.txt  readme
CMakeTemplate/MultiDirectoryTemplate/calc/: CMakeLists.txt
CMakeTemplate/MultiDirectoryTemplate/sort/: CMakeLists.txt
CMakeTemplate/MultiDirectoryTemplate/test1/: CMakeLists.txt  calc.cpp
CMakeTemplate/MultiDirectoryTemplate/test2/: CMakeLists.txt  sort.cpp
Fileoperater/: Makefile  TestFile(Nodelete).cpp  TestFile.h  test.txt
JSON/: CMakeLists.txt  JsonTest.cpp  main
LOG/: log.cpp  log.h
LOG/spdlog/: CMakeLists.txt  log.cpp  log.h  readme  test.cpp
MD5/: md5Impl.cpp
STL/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  testSTL.cpp
STL/src/: main.cpp
TCP/UDP/socket/: CMakeLists.txt  client.cpp  server.cpp
base64/: base64.cpp  base64.h  base64_2
btManage/: CMakeLists.txt  libbt_impl.cpp  libbt_impl.h  test.cpp
concurrentCoding/: CMakeLists.txt  main.cpp
designPattern/: Singleton.h  Singleton2.h
extracted_files/: acpi.ini  acpi.vms
ftpDownLoad/: ftp-manager.c  ftp-manager.h  main.c  test
lib/: libarchive.so.13.1.2  libcrypto.so.1.1
libarchive/compress/: compress.cpp  compress.h
libevent/: CMakeLists.txt  epoll.cpp  epoll_client.cpp  epoll_server.cpp  libtest
popen/: Ltest  Makefile  libevent-2.1.so.6  system.cpp  system1.h  test.cpp  test.h
threadPool/: CMakeLists.txt  TaskPool.cpp  TaskPool.h  main  main.cpp
xml/: VMsgConfig.xml  tinyxml2.cpp
